fix alignment for products

--- a/wp-content/themes/theme-femac-new/css/menu.css
+++ b/wp-content/themes/theme-femac-new/css/menu.css
@@ -132,7 +132,7 @@
   bottom: -12px;
 }
 #cssmenu ul ul {
-  display: none;
+
 }
 #cssmenu ul ul li {
   border-left: 1px solid #ccc;
