--- a/wp-content/themes/theme-femac-new/style.css
+++ b/wp-content/themes/theme-femac-new/style.css
@@ -117,21 +117,59 @@ outline: none;
 }
 
 .contact{
-  padding:20px;
-  height:300px;   
-}
-.latest-blog{
-  padding: 20px;
-  height: 150px;
-}
-.latest-news{
-  padding: 20px;
-  height: 150px;
-}
-.mini-footer{ 
- margin-bottom:30px; 
+  padding:20px; 
 }
 
+.latest-blog{
+  padding:20px 10px;
+   border-left: 1px solid #ededed;
+}
+.latest-blog li{
+  list-style: none;
+}
+
+.latest-blog h4 {
+  font-size: 19px;
+  font-weight: bold;
+  padding:20px 37px; 
+  color:#302ab0;
+}
+.latest-blog p{
+  color:#89838f;
+  padding:20px 0px;  
+}
+
+.latest-news{
+  padding:20px 10px;
+  border-top: 1px solid #ededed;
+  border-left: 1px solid #ededed;
+}
+
+.latest-news li{
+  list-style: none;
+}
+
+.latest-news h4 {
+  font-size: 19px;
+  font-weight: bold;
+  padding:20px 37px; 
+  color:#302ab0; 
+}
+
+.latest-news p{
+  color:#89838f;
+  padding:20px 0px;  
+}
+
+.contact{
+  padding:90px; 
+  margin-top:90px; 
+}
+
+
+.top{
+  border-top: 1px solid #ededed;
+}
 
 /* ============== about ====================== */
 
@@ -358,7 +396,7 @@ outline: none;
   padding:40px; 
   width:100% !important;   
   height:auto !important;
-  border-bottom:1px solid #d8dcdf; 
+  border-bottom:1px solid #f3f3f3; 
 }
 
 .arrow_box-latest:after, .arrow_box-latest:before {
@@ -463,13 +501,13 @@ outline: none;
 }
 
 .woo-custom h3{
-    font-size:14px !important;
-    font-weight: bold;
-    margin-bottom:30px; 
+  font-size:14px !important;
+  font-weight: bold;
+  margin-bottom:30px; 
 }
 
 .woo-custom li img{
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #f3f3f3;
   padding-bottom:60px;  
 }
 
@@ -705,7 +743,7 @@ outline: none;
   padding:30px 60px; 
   width:100% !important;   
   height:auto !important;
-  border-bottom:1px solid #d8dcdf; 
+  border-bottom:1px solid #f3f3f3; 
   margin-bottom:15px;
 }
 .related li {
